fix: wrong aggregate for http service stats
